Update symmetric JSON with additional fields and descriptions

--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -379,10 +379,11 @@
 <link href="#rfc.section.2" rel="Chapter" title="2 Capabilities Registration"/>
 <link href="#rfc.section.2.1" rel="Chapter" title="2.1 Required Prerequisite Algorithms for Symmetric Validations"/>
 <link href="#rfc.section.2.2" rel="Chapter" title="2.2 Symmetric Algorithm Capabilities JSON Values"/>
-<link href="#rfc.section.2.3" rel="Chapter" title="2.3 Supported Symmetric Algorithms"/>
+<link href="#rfc.section.2.3" rel="Chapter" title="2.3 Data, IV and AAD Lengths"/>
+<link href="#rfc.section.2.4" rel="Chapter" title="2.4 Supported Symmetric Algorithms"/>
 <link href="#rfc.section.3" rel="Chapter" title="3 Test Vectors"/>
 <link href="#rfc.section.3.1" rel="Chapter" title="3.1 Test Groups JSON Schema"/>
-<link href="#rfc.section.3.2" rel="Chapter" title="3.2 Test Vectors JSON Schema"/>
+<link href="#rfc.section.3.2" rel="Chapter" title="3.2 Test Case JSON Schema"/>
 <link href="#rfc.section.4" rel="Chapter" title="4 Test Vector Responses"/>
 <link href="#rfc.section.5" rel="Chapter" title="5 Acknowledgements"/>
 <link href="#rfc.section.6" rel="Chapter" title="6 IANA Considerations"/>
@@ -461,10 +462,11 @@
 </ul><li>2.   <a href="#rfc.section.2">Capabilities Registration</a></li>
 <ul><li>2.1.   <a href="#rfc.section.2.1">Required Prerequisite Algorithms for Symmetric Validations</a></li>
 <li>2.2.   <a href="#rfc.section.2.2">Symmetric Algorithm Capabilities JSON Values</a></li>
-<li>2.3.   <a href="#rfc.section.2.3">Supported Symmetric Algorithms</a></li>
+<li>2.3.   <a href="#rfc.section.2.3">Data, IV and AAD Lengths</a></li>
+<li>2.4.   <a href="#rfc.section.2.4">Supported Symmetric Algorithms</a></li>
 </ul><li>3.   <a href="#rfc.section.3">Test Vectors</a></li>
 <ul><li>3.1.   <a href="#rfc.section.3.1">Test Groups JSON Schema</a></li>
-<li>3.2.   <a href="#rfc.section.3.2">Test Vectors JSON Schema</a></li>
+<li>3.2.   <a href="#rfc.section.3.2">Test Case JSON Schema</a></li>
 </ul><li>4.   <a href="#rfc.section.4">Test Vector Responses</a></li>
 <li>5.   <a href="#rfc.section.5">Acknowledgements</a></li>
 <li>6.   <a href="#rfc.section.6">IANA Considerations</a></li>
@@ -531,7 +533,7 @@
     </tr>
     <tr>
       <td class="left">prereqAlgVal</td>
-      <td class="left">prerequistie algorithm validation</td>
+      <td class="left">prerequisite algorithm validation</td>
       <td class="left">object with algorithm and valValue properties</td>
       <td class="left">see above</td>
       <td class="left">Yes</td>
@@ -558,7 +560,7 @@
       <td class="left">algorithm</td>
       <td class="left">The symmetric algorithm and mode to be validated.</td>
       <td class="left">value</td>
-      <td class="left">See <a href="#supported_algs">Section 2.3</a></td>
+      <td class="left">See <a href="#supported_algs">Section 2.4</a></td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -570,7 +572,7 @@
     </tr>
     <tr>
       <td class="left">prereqVals</td>
-      <td class="left">Prerequistie algorithm validations</td>
+      <td class="left">Prerequisite algorithm validations</td>
       <td class="left">array of prereqAlgVal objects</td>
       <td class="left">See <a href="#prereq_algs">Section 2.1</a></td>
       <td class="left">Yes</td>
@@ -612,7 +614,7 @@
     </tr>
     <tr>
       <td class="left">ptLen</td>
-      <td class="left">The supported plaintext lengths in bits</td>
+      <td class="left">The supported plaintext lengths in bits.   This array varies depending on the algorithm type, for additional details see <a href="#data_lengths">Section 2.3</a></td>
       <td class="left">array</td>
       <td class="left">0-65536</td>
       <td class="left">No</td>
@@ -626,7 +628,7 @@
     </tr>
     <tr>
       <td class="left">ivLen</td>
-      <td class="left">The supported IV lengths in bits</td>
+      <td class="left">The supported IV/Nonce lengths in bits, see <a href="#data_lengths">Section 2.3</a></td>
       <td class="left">array</td>
       <td class="left">8-1024</td>
       <td class="left">Yes</td>
@@ -668,7 +670,7 @@
     </tr>
     <tr>
       <td class="left">aadLen</td>
-      <td class="left">The supported AAD lengths in bits for AEAD algorithms</td>
+      <td class="left">The supported AAD lengths in bits for AEAD algorithms, </td>
       <td class="left">array</td>
       <td class="left">0-65536</td>
       <td class="left">Yes</td>
@@ -682,25 +684,125 @@
     </tr>
     <tr>
       <td class="left">tagLen</td>
-      <td class="left">The supported Tag lengths in bits for AEAD algorithms</td>
+      <td class="left">The supported Tag lengths in bits for AEAD algorithms, <a href="#data_lengths">Section 2.3</a></td>
       <td class="left">array</td>
-      <td class="left">4, 6, 8, 10, 12, 14, 16, 32, 64, 96, 104, 112, 120, 128</td>
+      <td class="left">4-128</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">kwCipher</td>
+      <td class="left">The cipher as defined in SP800-38F for key wrap mode</td>
+      <td class="left">array</td>
+      <td class="left">cipher, inverse</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">tweakFormat</td>
+      <td class="left">The format of tweak value input for AES-XTS</td>
+      <td class="left">array</td>
+      <td class="left">128hex, duSequence</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">ctrSource</td>
+      <td class="left">The source of the counter for counter-mode</td>
+      <td class="left">value</td>
+      <td class="left">internal, external</td>
       <td class="left">Yes</td>
     </tr>
   </tbody>
 </table>
 <p id="rfc.section.2.2.p.2">Note: Some optional values are required depending on the algorithm.  For example, AES-GCM requires ivLen, ivGen, ivGenMode, aadLen and tagLen.  Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.</p>
-<h1 id="rfc.section.2.3"><a href="#rfc.section.2.3">2.3.</a> <a href="#supported_algs" id="supported_algs">Supported Symmetric Algorithms</a></h1>
-<p id="rfc.section.2.3.p.1">The following symmetric algorithms may be advertised by the ACVP compliant crypto module:</p>
+<h1 id="rfc.section.2.3"><a href="#rfc.section.2.3">2.3.</a> <a href="#data_lengths" id="data_lengths">Data, IV and AAD Lengths</a></h1>
+<p id="rfc.section.2.3.p.1">Some algorithms allow ranges of data, IV and AAD lengths.  This table outlines the allowed values.</p>
+<div id="rfc.table.3"/>
+<div id="data_table"/>
+<table cellpadding="3" cellspacing="0" class="tt full center">
+  <caption>Symmetric Algorithm Capabilities JSON Values</caption>
+  <thead>
+    <tr>
+      <th class="left">Algorithm</th>
+      <th class="left">Payload</th>
+      <th class="left">IV/Nonce</th>
+      <th class="left">Tag</th>
+      <th class="left">AAD</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="left">AES-CCM</td>
+      <td class="left">Two values, minimum greater than or equal to zero and maximum less than or equal to 32</td>
+      <td class="left">Array of values from 7 to 13</td>
+      <td class="left">Array of values from 4 to 16, even values only</td>
+      <td class="left">Two values, minimum greater than or equal to zero and maximum less than or equal to 32</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">AES-GCM</td>
+      <td class="left">Array to include, if supported,  zero, two values divisible by 128 and two values not divisible by 128</td>
+      <td class="left">Array one to three values between 8 and 1024</td>
+      <td class="left">Array of supported values of: 32, 64, 96, 104, 112, 120, 128</td>
+      <td class="left">Array to include, if supported,  zero, two values divisible by 128 and two values not divisible by 128</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">AES-XTS</td>
+      <td class="left">Array to include, if supported,  zero, two values divisible by 128 and two values not divisible by 128. Followed by the maximum data length not to exceed 2^20</td>
+      <td class="left">N/A</td>
+      <td class="left">N/A</td>
+      <td class="left">N/A</td>
+    </tr>
+  </tbody>
+</table>
+<h1 id="rfc.section.2.4"><a href="#rfc.section.2.4">2.4.</a> <a href="#supported_algs" id="supported_algs">Supported Symmetric Algorithms</a></h1>
+<p id="rfc.section.2.4.p.1">The following symmetric algorithms may be advertised by the ACVP compliant crypto module:</p>
 <p/>
 
 <ul>
   <li>AES-EBC</li>
   <li>AES-CBC</li>
+  <li>AES-CBCI</li>
   <li>AES-OFB</li>
+  <li>AES-OFBI</li>
   <li>AES-CFB1</li>
   <li>AES-CFB8</li>
   <li>AES-CFB128</li>
+  <li>AES-CFBP1</li>
+  <li>AES-CFBP8</li>
+  <li>AES-CFBP128</li>
   <li>AES-CTR</li>
   <li>AES-GCM</li>
   <li>AES-CCM</li>
@@ -719,7 +821,7 @@
 <h1 id="rfc.section.3"><a href="#rfc.section.3">3.</a> <a href="#test_vectors" id="test_vectors">Test Vectors</a></h1>
 <p id="rfc.section.3.p.1">The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation.  A typical ACVP validation session would require multiple test vector sets to be downloaded and processed by the ACVP client.  Each test vector set represents an individual crypto algorithm, such as AES-EBC, AES-CBC, AES-CTR, AES-GCM, DES-CBC, DES-CTR, etc.  This section describes the JSON schema for a test vector set used with symmetric crypto algorithms.</p>
 <p id="rfc.section.3.p.2">The test vector set JSON schema is a multi-level hierarchy that contains meta data for the entire vector set as well as individual test vectors to be processed by the ACVP client.  The following table describes the JSON elements at the top level of the hierarchy.  </p>
-<div id="rfc.table.3"/>
+<div id="rfc.table.4"/>
 <div id="vs_top_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Set JSON Object</caption>
@@ -753,7 +855,7 @@
     </tr>
     <tr>
       <td class="left">algorithm</td>
-      <td class="left">The symmetric algorithm and mode used for the test vectors.  See <a href="#supported_algs">Section 2.3</a> for possible values.</td>
+      <td class="left">The symmetric algorithm and mode used for the test vectors.  See <a href="#supported_algs">Section 2.4</a> for possible values.</td>
       <td class="left">value</td>
     </tr>
     <tr>
@@ -780,7 +882,7 @@
 </table>
 <h1 id="rfc.section.3.1"><a href="#rfc.section.3.1">3.1.</a> <a href="#tgjs" id="tgjs">Test Groups JSON Schema</a></h1>
 <p id="rfc.section.3.1.p.1">The testGroups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  For instance, all test vectors that use the same key size would be grouped together.  The Test Group JSON object contains meta data that applies to all test vectors within the group.  The following table describes the JSON elements of the Test Group JSON object.</p>
-<div id="rfc.table.4"/>
+<div id="rfc.table.5"/>
 <div id="vs_tg_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Test Group JSON Object</caption>
@@ -861,9 +963,9 @@
     </tr>
   </tbody>
 </table>
-<h1 id="rfc.section.3.2"><a href="#rfc.section.3.2">3.2.</a> <a href="#tvjs" id="tvjs">Test Vectors JSON Schema</a></h1>
-<p id="rfc.section.3.2.p.1">Each test group contains an array of one or more test vectors.  Each test vector is a JSON object that represents a single test case to be processed by the ACVP client.  The following table describes the JSON elements for each test vector.</p>
-<div id="rfc.table.5"/>
+<h1 id="rfc.section.3.2"><a href="#rfc.section.3.2">3.2.</a> <a href="#tvjs" id="tvjs">Test Case JSON Schema</a></h1>
+<p id="rfc.section.3.2.p.1">Each test group contains an array of one or more test cases.  Each test case is a JSON object that represents a single vector to be processed by the ACVP client.  The following table describes the JSON elements for each test case.</p>
+<div id="rfc.table.6"/>
 <div id="vs_tc_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Test Case JSON Object</caption>
@@ -878,7 +980,7 @@
   <tbody>
     <tr>
       <td class="left">tcId</td>
-      <td class="left">Unique numeric identifier for the test case</td>
+      <td class="left">Numeric identifier for the test case, unique across the entire vector set.</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
@@ -957,8 +1059,8 @@
   </tbody>
 </table>
 <h1 id="rfc.section.4"><a href="#rfc.section.4">4.</a> <a href="#vector_responses" id="vector_responses">Test Vector Responses</a></h1>
-<p id="rfc.section.4.p.1">After the ACVP client downloads and processes a vector set, it must send the resonse vectors back to the ACVP server.  The following table describes the JSON object that represents a vector set response.</p>
-<div id="rfc.table.6"/>
+<p id="rfc.section.4.p.1">After the ACVP client downloads and processes a vector set, it must send the response vectors back to the ACVP server.  The following table describes the JSON object that represents a vector set response.</p>
+<div id="rfc.table.7"/>
 <div id="vr_top_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Set Response JSON Object</caption>
