Fix poorly formatted tags
This is a follow up to #33 which fixes several typos.

--- a/artifacts/acvp_protocol.html
+++ b/artifacts/acvp_protocol.html
@@ -769,14 +769,14 @@ Accept:
 "direction" : "encrypt,decrypt",
 "ivGen" : "internal",
 "ivGenMode" : "8.2.1",
-"keyLens" : [
+"keyLen" : [
             128,
             256
              ],
 "tagLen" : [
             96
                ],
-"ivLens" : [
+"ivLen" : [
             96
                ],
 "ptLen" : [
@@ -836,11 +836,11 @@ Content-Length: &lt;length of results&gt;
   "direction": "encrypt",
   "test_groups": [
     {
-      "keylen": 128,
-      "ivlen": 96,
-      "ptlen": 0,
-      "aadlen": 128,
-      "taglen": 128,
+      "keyLen": 128,
+      "ivLen": 96,
+      "ptLen": 0,
+      "aadLen": 128,
+      "tagLen": 128,
       "tests": [
         {
           "tcId": 12340,
@@ -1015,7 +1015,7 @@ Content-Length: &lt;length of results&gt;
 <p id="rfc.section.A.p.3">Keywords should be chosen such that they are informative and brief, for example: </p>
 <p id="rfc.section.A.p.4">{ "acvVersion" : "0.2", "results" : { "disposition" : "incomplete", } </p>
 <p id="rfc.section.A.p.5">Metadata assigned to the keyword may use any format which best reflects the information being represented including hyphens, underscores alternating case, numbers, etc. However, brevity should be a major consideration, for example:</p>
-<p id="rfc.section.A.p.6">"algorithms" : [ { "algorithm" : "AES-GCM", "mode" : "modes", "ivGen" : "internal", "ivGenMode" : "8.2.1", } All metadata representing strings or big numbers shall use double quotes at both ends.  Big numbers require conversion from strings to whatever format is used by the DUT.  Numerical values of integer size or with decimal points may use quotations if those values are generally used as a string, for example the acvVersion would generally be used in displaying information not in any mathematical operations.  Something like keyLen or ptLens values would be better used without quotes to avoid having to convert the string to an integer for use in the code.  </p>
+<p id="rfc.section.A.p.6">"algorithms" : [ { "algorithm" : "AES-GCM", "mode" : "modes", "ivGen" : "internal", "ivGenMode" : "8.2.1", } All metadata representing strings or big numbers shall use double quotes at both ends.  Big numbers require conversion from strings to whatever format is used by the DUT.  Numerical values of integer size or with decimal points may use quotations if those values are generally used as a string, for example the acvVersion would generally be used in displaying information not in any mathematical operations.  Something like keyLen or ptLen values would be better used without quotes to avoid having to convert the string to an integer for use in the code.  </p>
 <h1 id="rfc.authors">
   <a href="#rfc.authors">Author's Address</a>
 </h1>
