Update the date
Set the correct month

--- a/artifacts/acvp_sub_rsa.html
+++ b/artifacts/acvp_sub_rsa.html
@@ -433,7 +433,7 @@
 
   <meta name="dct.creator" content="Vassilev, A., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subrsa-00" />
-  <meta name="dct.issued" scheme="ISO8601" content="2016-8" />
+  <meta name="dct.issued" scheme="ISO8601" content="2016-12-23" />
   <meta name="dct.abstract" content="This document defines the JSON schema for testing RSA algorithm implementations for conformance to  " />
   <meta name="description" content="This document defines the JSON schema for testing RSA algorithm implementations for conformance to  " />
 
@@ -454,10 +454,10 @@
 </tr>
 <tr>
   <td class="left">Intended status: Informational</td>
-  <td class="right">August 2016</td>
+  <td class="right">December 23, 2016</td>
 </tr>
 <tr>
-  <td class="left">Expires: February 2, 2017</td>
+  <td class="left">Expires: June 26, 2017</td>
   <td class="right"></td>
 </tr>
 
@@ -478,7 +478,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on February 2, 2017.</p>
+<p>This Internet-Draft will expire on June 26, 2017.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
